tests/type-error/cycle-detection/top-level/Simple.vix
f : Int
f =
  let g _ = f
  g MkUnit
